# memxp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  release.yml
audit/: README.md  config.example.env  install.sh  memxp-audit.sh
audit/prompts/: infrastructure-verify.md  knowledge-health.md  meditation-patterns.md  project-activity.md  synthesis.md
commands/: memup.md
crates/vault-cli/: Cargo.toml
crates/vault-cli/src/: main.rs
crates/vault-cli/src/commands/: advanced.rs  auth.rs  config.rs  confirm.rs  conflicts.rs  credentials.rs  daemon.rs  doctor.rs  encrypt.rs  export_import.rs  guides.rs  init.rs  mcp_bridge.rs  mod.rs  monitoring.rs  self_update.rs  sync.rs
crates/vault-cli/tests/: cli_tests.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: auth.rs  challenge.rs  config.rs  conflicts.rs  credential_store.rs  crypto.rs  db.rs  keyring_backend.rs  lib.rs  lint.rs  models.rs  operator_session.rs  query.rs  rotation.rs  security.rs  tasks.rs  vault_db.rs
crates/vault-core/src/db/: entries.rs  guides.rs  mod.rs  schema.rs
crates/vault-mcp/: Cargo.toml
crates/vault-mcp/help/: all.txt  security.txt  tools.txt  workflow.txt
crates/vault-mcp/src/: clipboard.rs  lib.rs  params.rs  response.rs  server.rs
crates/vault-mcp/src/tools/: conflicts.rs  credentials.rs  guides.rs  mod.rs  monitoring.rs  security.rs
crates/vault-mcp/tests/: tool_tests.rs
crates/vault-sync/: Cargo.toml
crates/vault-sync/src/: capabilities.rs  daemon.rs  lib.rs  protocol.rs  serde_wire.rs  session.rs
crates/vault-web/: Cargo.toml
crates/vault-web/src/: lib.rs  server.rs
crates/vault-web/src/api/: mod.rs
crates/vault-web/src/auth/: mod.rs  password.rs  totp.rs
crates/vault-web/tests/: web_tests.rs
docs/: SKILL.md  architecture.md  examples.md  threat-model.md
scripts/: build-release.sh  fleet.json  install-binary.sh  install.ps1  install.sh  uninstall.sh  update-fleet.sh
scripts/daemon/: com.memxp.sync-daemon.plist  memxp-daemon-guard.bash  memxp-daemon-guard.zsh  memxp-daemon.service
static/: app.js  index.html  style.css
tests/: Cargo.toml  e2e.rs  lib.rs  wire_compat.rs
