[package]
name = "vault-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "memxp"
path = "src/main.rs"

[dependencies]
vault-core = { path = "../vault-core" }
vault-sync = { path = "../vault-sync" }
vault-mcp = { path = "../vault-mcp" }
vault-web = { path = "../vault-web" }
anyhow = "1"
chrono = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rmcp = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
