[package]
name = "vault-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
keyring = { workspace = true }
strsim = { workspace = true }
dirs = { workspace = true }
zeroize = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
