[package]
name = "vault-web"
version.workspace = true
edition.workspace = true

[dependencies]
vault-core = { path = "../vault-core" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
totp-rs = { workspace = true }
base32 = { workspace = true }
arboard = "3"

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { version = "0.12", features = ["json", "cookies"] }
